working auth backend, update application.properties for yourself